--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:theme="@style/Theme.MediaPlayerApp">
         <activity
             android:name=".ui.video_player.VideoPlayerActivity"
-            android:configChanges="orientation|screenSize|layoutDirection"
+            android:supportsPictureInPicture="true"
+            android:configChanges="orientation|screenSize|layoutDirection|screenLayout"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="false" />
         <activity
