add song class, song loder, song Adapter, song item

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
 
     implementation "androidx.room:room-runtime:$room_version"
