--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,5 @@ task clean(type: Delete) {
 project.ext {
     room_version = '2.4.2'
     exoplayer_version = '2.17.1'
+    glide_version = '4.13.0'
 }
