--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@ package="com.example.mediaplayerapp">
     </activity>
 
     <service
-        android:name="com.example.mediaplayerapp.services.BackgroundMusicService"
+        android:name="com.example.mediaplayerapp.services.MusicPlaybackService"
         android:exported="false">
         <intent-filter>
             <action android:name="android.media.browse.MediaBrowserService" />
