Remove action bar in music playback screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@ package="com.example.mediaplayerapp">
 
     <activity
         android:name=".ui.music_player.MusicPlayerActivity"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:exported="false" />
 
     <activity
