--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@ package="com.example.mediaplayerapp">
 
     <activity
         android:name=".ui.music_player.MusicPlayerActivity"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.MediaPlayerApp.NoActionBar"
         android:exported="false" />
 
     <activity
