--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    implementation "io.github.gautamchibde:audiovisualizer:$audiovisualizer_version"
+
 }
