--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ project.ext {
     room_version = '2.4.2'
     exoplayer_version = '2.17.1'
     glide_version = '4.13.0'
+    audiovisualizer_version = '2.2.5'
 }
