--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     implementation "io.github.gautamchibde:audiovisualizer:$audiovisualizer_version"
 
+    implementation "jp.wasabeef:glide-transformations:$glide_transformations_version"
+    implementation "jp.co.cyberagent.android:gpuimage:$gpuimage_version"
+
 }
