--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,6 @@ project.ext {
     exoplayer_version = '2.17.1'
     glide_version = '4.13.0'
     audiovisualizer_version = '2.2.5'
+    glide_transformations_version = '4.3.0'
+    gpuimage_version = '2.1.0'
 }
