--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,32 @@ package="com.example.mediaplayerapp">
         android:configChanges="orientation|screenSize|layoutDirection|screenLayout"
         android:launchMode="singleTask"
         android:theme="@style/Theme.MediaPlayerApp.ImmersivePlayer"
-        android:exported="false" />
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:mimeType="video/*" />
+            <data android:scheme="http" />
+            <data android:scheme="file" />
+            <data android:scheme="content" />
+        </intent-filter>
+    </activity>
 
     <activity
         android:name=".ui.music_player.MusicPlayerActivity"
         android:theme="@style/Theme.MediaPlayerApp.ImmersivePlayer"
-        android:exported="false" />
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:mimeType="audio/*" />
+            <data android:scheme="http" />
+            <data android:scheme="file" />
+            <data android:scheme="content" />
+        </intent-filter>
+    </activity>
 
     <activity
         android:name=".MainActivity"
